--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     .letter-container{
       position:fixed;
       left:50%;
-      bottom:24px;
-      transform:translateX(-50%);
+      top:50%;
+      transform:translate(-50%, -50%);
       display:inline-flex;
       flex-direction:column;
       gap:var(--row-gap);
@@ -461,6 +461,11 @@
         left:20px;
         right:20px;
         width:auto;
+      }
+      .letter-container{
+        top:auto;
+        bottom:24px;
+        transform:translateX(-50%);
       }
       .theme-grid{grid-template-columns: repeat(2, minmax(0, 1fr));}
       .rowctl.letters-control{display:none}
